--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -1,33 +1,37 @@
 <div class="europe  has-no-ticker ">
-	<div id="header-wrapper">		
-		<div id="blq-local-nav">
-        	<ul id="nav" class="nav">
-        		<li class="first-child "><a href="http://www.bbc.co.uk/news/">Home</a></li>
-        		<li class="selected"><a href="http://www.bbc.co.uk/news/world/">World</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/uk/">UK</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/england/">England</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/northern_ireland/">N. Ireland</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/scotland/">Scotland</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/wales/">Wales</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/business/">Business</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/politics/">Politics</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/health/">Health</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/education/">Education</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/science_and_environment/">Sci/Environment</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/technology/">Technology</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/entertainment_and_arts/">Entertainment &amp; Arts</a></li>
-        	</ul>
-        	
-        	<ul id="sub-nav" class="nav"> 
-        		<li class="first-child "><a href="http://www.bbc.co.uk/news/world/africa/">Africa</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/world/asia/">Asia</a></li>
-        		<li class="selected"><a href="http://www.bbc.co.uk/news/world/europe/">Europe</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/world/latin_america/">Latin America</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/world/middle_east/">Middle East</a></li>
-        		<li><a href="http://www.bbc.co.uk/news/world/us_and_canada/">US &amp; Canada</a></li>
-        	</ul>
-        </div>			  			  
-    </div>
+<div id="header-wrapper">
+	<h2 id="header">
+		<a rel="index" href="http://www.bbc.co.uk/news/"><img alt="BBC News" src="./BBC News - Syrian plane had illegal cargo, says Turkey's Davutoglu_files/news-blocks.gif"></a>
+		<span class="section-title">Europe</span>
+	</h2>
+	
+	<div id="blq-local-nav">
+    	<ul id="nav" class="nav">
+    		<li class="first-child "><a href="http://www.bbc.co.uk/news/">Home</a></li>
+    		<li class="selected"><a href="http://www.bbc.co.uk/news/world/">World</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/uk/">UK</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/england/">England</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/northern_ireland/">N. Ireland</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/scotland/">Scotland</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/wales/">Wales</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/business/">Business</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/politics/">Politics</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/health/">Health</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/education/">Education</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/science_and_environment/">Sci/Environment</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/technology/">Technology</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/entertainment_and_arts/">Entertainment &amp; Arts</a></li>
+    	</ul>
+    	
+    	<ul id="sub-nav" class="nav"> 
+    		<li class="first-child "><a href="http://www.bbc.co.uk/news/world/africa/">Africa</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/world/asia/">Asia</a></li>
+    		<li class="selected"><a href="http://www.bbc.co.uk/news/world/europe/">Europe</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/world/latin_america/">Latin America</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/world/middle_east/">Middle East</a></li>
+    		<li><a href="http://www.bbc.co.uk/news/world/us_and_canada/">US &amp; Canada</a></li>
+    	</ul>
+    </div>			  			  
     
     <div id="content-wrapper" class="domestic">
     	<div id="main-content" class="story blq-clearfix">
