--- a/views/news_events.erb
+++ b/views/news_events.erb
@@ -1,4 +1,16 @@
-
+  <header class="banner" role="banner">
+    <div id="global-header">
+      <a href="http://www.bbc.co.uk">
+        <img src="/images/bbc_blocks.png" width="84" height="24" alt="British Broadcasting Corporation" />
+      </a>
+    </div>
+    <div id="events-header">
+      <h1>
+        <a href="http://www.bbc.co.uk/news">Events</a>
+      </h1>
+    </div>
+  </header>
+    
   <div class="container" id="news-labs-tabs">
     <div id="tab-wrapper" class="outer solid">
       <div id="index-tabs" class="tabs">
@@ -17,32 +29,31 @@
     </div>
   </div>
 
-<div class="container" id="news-lab-events">
-  <nav class="breadcrumb">
-  <ol>
-    <li><a href="/">Events</a></li>
-  </ol>
-  </nav>
+  <div class="container" id="news-lab-events">
+	  <nav class="breadcrumb">
+		  <ol>
+		    <li><a href="/">Events</a></li>
+		  </ol>
+	  </nav>
+	  <article class="intro">
+	  <header class="section">
+	  	<h1><%= @page[:event].name %></h1>
+	  </header>
+	  <figure id="main">
+	  	<img src="/images/event/event-placeholder.jpeg" alt="Event placeholder"/>
+	  	<figcaption>Bombing in a Syrian city</a></figcaption>
+	  </figure>
+	<p id="event-description"><%= @page[:event].description %></p>
 
-  <article class="intro">
-  <header class="section">
-  <h1><%= @page[:event].name %></h1>
-  </header>
-  <figure id="main">
-  <img src="/images/event/event-placeholder.jpeg" alt="Event placeholder"/>
-  <figcaption>Bombing in a Syrian city</a></figcaption>
-</figure>
-<p id="event-description"><%= @page[:event].description %></p>
-
-<a href="#">
-  <span class="cta">
-    <span class="icon live">
-      <b>LIVE</b>
-    </span>
-    Breaking news <time>1 hour ago</time>
-  </span>
-</a>
-</article>      
+	<a href="#">
+	  <span class="cta">
+	    <span class="icon live">
+	      <b>LIVE</b>
+	    </span>
+	    Breaking news <time>1 hour ago</time>
+	  </span>
+	</a>
+  </article>      
 
 <%= erb :'modules/_articles' %>
 
