--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -46,6 +46,7 @@
             <!--  This is the embedded player component -->
             <!-- wwrights check -->
             <!-- Empty country is used on test environment -->
+            <% if not @page[:article].image == "http://news-labs-events-prototype.herokuapp.com/images/event/event-placeholder.jpeg" %>
             <div class="videoInStoryB">
               <div id="emp-19905573-49629" class="emp page-bookmark-link-aware" style="position: relative; cursor: pointer; height: 252px; ">
                 <img src="<%=@page[:article].image%>" width="448" height="252"><a title="Click to play" style="background-color: rgb(0, 0, 0); opacity: 0.75; width: 80px; height: 80px; display: block; position: absolute; left: 0px; top: 50%; margin-top: -40px; "></a><a title="Click to play" style="background-color: rgb(255, 0, 0); opacity: 0; width: 80px; height: 80px; display: block; position: absolute; left: 0px; top: 50%; margin-top: -40px; "></a>
@@ -57,6 +58,7 @@
               <p class="caption"><%=@page[:article].description%></p>
               <!-- END - caption -->										
             </div>
+            <% end %>
             <!-- end of the embedded player component -->										
             <!-- Player embedded --><div class="embedded-hyper">
               <a class="hidden" href="http://www.bbc.co.uk/news/world-europe-19906578#story_continues_1">Continue reading the main story</a>
@@ -416,161 +418,35 @@
 
 
           </div>
-
-
         </div><!-- / layout-block-a -->
 
         <div class="layout-block-b">	
-
-
-
-
-
           <div class="hyperpuff">
-
-
-
-
-
             <div id="range-top-stories" class="top-stories-range-module">
-
               <h2 class="top-stories-range-module-header">Top Stories</h2>
-
-
-
               <!-- Non specific version -->
-
               <ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <li class=" first-child medium-image">
                 <a class="story" rel="published-1349963167240" href="http://www.bbc.co.uk/news/world-europe-19912532"><img src="/images/articles/_63434536_63427274.jpg" alt="People gather atop the aircraft steps at a Syrian passenger plane that was forced by Turkish jets to land at Esenboga airport in Ankara, Turkey, October 10">Plane interception angers Russia<span class="new-story-icon"> New</span></a>
-
                 </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <li>
                 <a class="story" rel="published-1349938296934" href="http://www.bbc.co.uk/news/uk-england-leeds-19906695">Probe into Savile hospital claims</a>
-
                 </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                <li>
-                <a class="story" rel="published-1349962652610" href="http://www.bbc.co.uk/news/uk-19913000">£50m allocated for WWI centenary<span class="new-story-icon"> New</span></a>
-
-                </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <li>
                 <a class="story" rel="published-1349951210822" href="http://www.bbc.co.uk/news/uk-19906595">UK called for Abu Qatada pardon</a>
-
                 </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <li>
                 <a class="story" rel="published-1349950825075" href="http://www.bbc.co.uk/news/uk-england-19910377">Acid douse death 'preventable'</a>
-
                 </li>
-
               </ul>
-
-
-
             </div>
             <script type="text/javascript">$render("range-top-stories","range-top-stories");</script>
-
-
-
-
-
             <div id="features" class="feature-generic">
-
               <h2 class="features-header">Features &amp; Analysis</h2>
-
               <ul class="feature-main">
 
-
-
-
                 <!-- Non specific version -->
-
-
-
                 <li class="medium-image">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <h3 class=" feature-header">
                   <a class="story" rel="published-1349954804442" href="http://www.bbc.co.uk/sport/0/cycling/19907683"><img src="/images/articles/_63422266_armstrong.jpg" alt="Lance Armstrong">Fallen hero</a>
 
