View template for News Article page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/story.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/story(1).css">	
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/skin.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/klmodules.css">
 	<style type="text/css">img.emp-overlay-panel-holding-image {display:none;} .bbc-st-flash-hidden img.emp-overlay-panel-holding-image {display:block;}</style>
     <!-- News Article page assets -->
 	<% else %>
