--- a/public/stylesheets/articles/type.css
+++ b/public/stylesheets/articles/type.css
@@ -103,7 +103,9 @@ body #blq-container #blq-main {
 .container-featured-other-site-heading,
 .feature-digest-header,
 .generic-tiled-digest-header,
-.weather-4items h2,.marketdata-widget h2 {
+.weather-4items h2,.marketdata-widget h2,
+.people-generic h2, .places-generic h2, .events-generic h2
+ {
    font-size: 1.846em; /* 13px < 24px */
    font-weight: bold;
    letter-spacing: -1px;
