--- a/views/modules/_about.erb
+++ b/views/modules/_about.erb
@@ -15,6 +15,7 @@
             <li><a href="<%=about.uri%>">
               <%=about.title%>: <%=about.description.slice(0,20) + "..."%>
             </a>  
+            <img src="<%=about.image%>" width="100" height="100"/>
             </li>
           <% end %>
         </ul>
