Added ellipsis class rule

--- a/public/stylesheets/articles/klmodules.css
+++ b/public/stylesheets/articles/klmodules.css
@@ -1,3 +1,10 @@
+.ellipsis {
+  display: block;
+  width: 90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .kl-generic {
 	clear: both;
 	position: relative;
