working people kl content

--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -352,35 +352,7 @@
                       </ul>
                     </div>
                     <!-- K and L modules -->
-                    <!-- K and L People -->
-                    <div id="klpeople" class="kl-generic">
-                      <h2 class="people-header">People</h2>
-                      <ul class="kl-generic-main">
-                        <li class="medium-image">
-                        <h3 class="people-header">
-                          <a class="story" href="#"><img src="/images/articles/_63422266_armstrong.jpg">Lance Armstrong</a>
-                        </h3>
-                        <p>Small description about a person</p>
-                        <hr>
-                        <!-- Articles related to a person -->
-                        <div class="panel">
-                          <ol>
-                            <li>
-                            <a href="#" class="story">Rebel sticker craze on the Tube</a>
-                            </li>
-                            <li>
-                            <a href="#" class="story">Article 2</a>
-                            </li>
-                            <li>
-                            <a href="#" class="story">Article 3</a>
-                            </li>
-                          </ol>
-                        </div>
-                        <!-- Articles related to a person -->
-                        </li>   
-                      </ul>
-                    </div>
-
+		  <%= erb :'modules/_about_people' %>
 		  <%= erb :'modules/_about_places' %>
                  <!-- K and L Events -->
                   <div id="klevents" class="feature-generic">
