--- a/views/modules/_about_places.erb
+++ b/views/modules/_about_places.erb
@@ -18,6 +18,7 @@
       <div class="panel ">
         <ol>
           <% place.relations[:learn].objects.each do | about | %>
+          <% break if not about.populated %>
           <li>
             <a href="<%=about.uri%>" class="story"><%=about.title%></a>
             <span class="kl-article-description ellipsis"><%=about.description%></span>
