updated to add events in article pages

--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -352,6 +352,7 @@
                       </ul>
                     </div>
                     <!-- K and L modules -->
+		  <%= erb :'modules/_about_events' %>
 		  <%= erb :'modules/_about_people' %>
 		  <%= erb :'modules/_about_places' %>
                   <!-- K and L Modules -->
