--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -288,6 +288,7 @@
                     </div>
                     <script type="text/javascript"> 
                       <!--
+                      /*
                       $render("page-bookmark-links","page-bookmark-links-foot",{
                         useForgeShareTools:"true",
                         position:"bottom",
@@ -297,7 +298,8 @@
                         sectionId:'99123', 
                         url:'http://www.bbc.co.uk/news/world-europe-19906578', 
                         edition:'Domestic'
-                      }); 
+                      });
+                      */ 
                       -->
                     </script>
                   </div>
@@ -442,15 +444,14 @@
 
   <!-- shared/foot -->
   <script type="text/javascript">
-    bbc.fmtj.common.removeNoScript({});
-    bbc.fmtj.common.tabs.createTabs({});
+    //bbc.fmtj.common.removeNoScript({});
+    //bbc.fmtj.common.tabs.createTabs({});
   </script>
   <!-- hi/news/foot.inc -->
   <!-- shared/foot_story -->
   <!-- #CREAM hi news domestic foot.inc -->
 
   <div class="glow177-cssTest" style="height:0;position:absolute;visibility:hidden;top:-20px;display:block"></div>
-  <script src="./BBC News - Syrian plane had illegal cargo, says Turkey's Davutoglu_files/sharetools.js"></script>
   <div class="glowNoMask" style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px; left: 0px; overflow: auto; z-index: 9900; background-color: rgb(0, 0, 0); visibility: hidden; opacity: 0; background-position: initial initial; background-repeat: initial initial; "></div>
   <div class="glow177-overlay glowNoMask " style="z-index: 9990; width: 210px; " aria-hidden="true" id="bbc-st-share-panel" role="tooltip" aria-live="polite" tabindex="0">
     <div class="overlay-focalPoint" tabindex="-1"></div>
@@ -502,6 +503,5 @@
       <a href="http://www.bbc.co.uk/news/world-europe-19906578#">Close Panel</a>
     </div>
   </div>
-  <script async="" src="./BBC News - Syrian plane had illegal cargo, says Turkey's Davutoglu_files/shares"></script>
 </body>
 </html>
