--- a/views/news_events.erb
+++ b/views/news_events.erb
@@ -1,3 +1,4 @@
+<!--
 <header class="banner" role="banner">
 <div id="global-header">
   <a href="http://www.bbc.co.uk"><img src="/images/bbc_blocks.png" width="84" height="24" alt="British Broadcasting Corporation" /></a>
@@ -6,7 +7,8 @@
   <h1><a href="http://www.bbc.co.uk/news">Events</a></h1>
 </div>
 </header>
-
+-->
+<%= erb :'modules/_blq_masterhead' %>
 <div class="container" id="news-labs-tabs">
   <div id="tab-wrapper" class="outer solid">
     <div id="index-tabs" class="tabs">
