--- a/public/stylesheets/news.css
+++ b/public/stylesheets/news.css
@@ -41,12 +41,14 @@ div#news-lab-events .icon.live {
   position: relative;
   background-color: #cc0101;
   font-size: 1rem;
-  color: #ffffff;
   font-weight: 400;	
   letter-spacing: -0.0425em;
   line-height: 1em;    
   padding: 0.2em 0.33em 0 0.33em;
   top: -2px;	
+}
+div#news-lab-events .icon.live b {
+    color: #ffffff;
 }
 div#news-lab-events .cta time {
   font-weight: 400;
@@ -147,7 +149,7 @@ div#news-lab-events section.people ul section.articles ol li a {
 @media screen and (min-width: 1024px) {
 	div#news-lab-events {
 	    margin: 6px auto;
-	    width: 1024px;
+	    width: 976px;
 	}
 	#news-labs-tabs {
 	    margin: 0 auto;
@@ -158,19 +160,25 @@ div#news-lab-events section.people ul section.articles ol li a {
 	    float: left;   
 	}
 	div#news-lab-events article.intro figure {
-	    width: 736px;
+	    width: 726px;
 	    height: 414px;
+	    overflow: hidden;
 	}
 	div#news-lab-events section header h2 {	
         background: #dcdcdc;
     }
+    div#news-lab-events article.intro header{
+        position: absolute;
+        top: 224px;
+        left: 0;
+        z-index: 10;
+    }
     div#news-lab-events article.intro header h1 {
-	    margin-top: 373px;
+	    /*margin-top: 373px;*/
 	}
 	div#news-lab-events section.articles {
-	    width: 256px;
+	    width: 240px;
 	    float: left;
-	    margin-left: 10px;
 	}
     div#news-lab-events div.secondary-modules {        
         clear: both;
@@ -179,7 +187,7 @@ div#news-lab-events section.people ul section.articles ol li a {
         background-color: #ffffff;
     }
     div#news-lab-events section.people {
-        width: 496px;
+        width: 488px;
         float: left;
     }
     div#news-lab-events section.people ul li {
@@ -201,7 +209,7 @@ div#news-lab-events section.people ul section.articles ol li a {
         color: #ffffff;
     }
     div#news-lab-events section.places {
-        width: 480px;
+        width: 471px;
         float: left;
         margin-left: 16px;
     }
@@ -234,7 +242,7 @@ div#news-lab-events section.people ul section.articles ol li a {
 	  margin-top: 0;
 	}
 	div#news-lab-events section.timeline div.timeline-mockup {
-	    height: 961px;
+	    height: 380px;
 	    background: #ffffff url('../images/event/timeline-mockup-1024-view.jpg') no-repeat center 15px; 
     }
 }
