--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,14 +10,12 @@
     <% if @page_type == 'articles' %>
     <!-- News Article page assets -->
     <meta name="viewport" content="width = 996">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/articles/main.css">
-    
+    <link rel="stylesheet" type="text/css" href="/stylesheets/articles/main.css">    
    	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/type.css" />
    	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/global.css" />
    	<link rel="stylesheet" type="text/css" media="print" href="/stylesheets/articles/print.css" />
    	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 976px)" href="/stylesheets/articles/mobile.css" />
-	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/components.css" />
-	
+	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/components.css" />	
 	<link href="/stylesheets/articles/widgets.css" rel="stylesheet" type="text/css" class="gloaded async">	
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/story.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/story(1).css">	
@@ -27,9 +25,17 @@
     <!-- News Article page assets -->
 	<% else %>
 	<!-- Events page assets -->
-	<link rel="stylesheet" type="text/css" href="/stylesheets/reset.css">
+	<!-- <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css"> -->
+	
+	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/main.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/type.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/global.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/skin.css">
+	
+
 	<link rel="stylesheet" type="text/css" href="/stylesheets/core.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/<%= @page[:domain][:body_class] %>.css">
+
 		    
     <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>    
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
