--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -13,7 +13,7 @@
         <h3><%= person.name %></h3>
         </header>
         <div class="figure">
-          <figure>
+          <figure style="margin:0; padding: 0;">
           <img src="<%= person.thumbnail %>" alt="<%=person.name%>" />
           <figcaption><%=person.name%></a></figcaption>
         </figure>
