--- a/views/news_events.erb
+++ b/views/news_events.erb
@@ -1,63 +1,79 @@
-<!--
-<header class="banner" role="banner">
-<div id="global-header">
-  <a href="http://www.bbc.co.uk"><img src="/images/bbc_blocks.png" width="84" height="24" alt="British Broadcasting Corporation" /></a>
-</div>
-<div id="events-header">
-  <h1><a href="http://www.bbc.co.uk/news">Events</a></h1>
-</div>
-</header>
--->
 <%= erb :'modules/_blq_masterhead' %>
-<div class="container" id="news-labs-tabs">
-  <div id="tab-wrapper" class="outer solid">
-    <div id="index-tabs" class="tabs">
-      <ul>
-        <li class="tab-1"><a href="#">Top Stories</a></li>
-        <li class="tab-2"><a href="#">Most Read</a></li>
-        <li class="tab-3 open"><a href="/<%= "#{@page[:domain][:id]}" %>/events">Events</a></li>
-      </ul>
-    </div>
-  </div>
+
+<div id="blq-container-outer" class="blq-journalism-domestic blq-ltr">
+  <div id="blq-container" class="blq-lang-en-GB">
+    <div id="blq-container-inner" xml:lang="en-GB">
+      <div id="blq-main" class="blq-clearfix">
+        <div class="europe  has-no-ticker ">
+        
+	        <div id="header-wrapper">
+	            <h2 id="header">
+	              <a rel="index" href="http://www.bbc.co.uk/news/"><img alt="BBC News" src="/images/articles/news-blocks.gif"></a>
+	              <span class="section-title">Europe</span>
+	            </h2>
+	            <div id="blq-local-nav">
+	              <ul id="nav" class="nav">
+	                <li class="first-child "><a href="http://www.bbc.co.uk/news/">Home</a></li>
+	                <li class="selected"><a href="http://www.bbc.co.uk/news/world/">World</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/uk/">UK</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/england/">England</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/northern_ireland/">N. Ireland</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/scotland/">Scotland</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/wales/">Wales</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/business/">Business</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/politics/">Politics</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/health/">Health</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/education/">Education</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/science_and_environment/">Sci/Environment</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/technology/">Technology</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/entertainment_and_arts/">Entertainment &amp; Arts</a></li>
+	              </ul>
+	              <ul id="sub-nav" class="nav"> 
+	                <li class="first-child "><a href="http://www.bbc.co.uk/news/world/africa/">Africa</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/world/asia/">Asia</a></li>
+	                <li class="selected"><a href="http://www.bbc.co.uk/news/world/europe/">Europe</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/world/latin_america/">Latin America</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/world/middle_east/">Middle East</a></li>
+	                <li><a href="http://www.bbc.co.uk/news/world/us_and_canada/">US &amp; Canada</a></li>
+	              </ul>
+	            </div>
+			</div>			
+			<!-- news-lab-events container -->			
+			<div class="container" id="news-lab-events">
+				<article class="intro">
+					<header class="section"><h1><%= @page[:event].name %></h1></header>
+					<figure id="main" style="margin:0; padding: 0;">
+						<% @image = "/images/event/event-placeholder.jpeg" %>
+						<% @page[:articles].each do | article | %> 
+							<% if not article.image.nil? %>
+								<% @image = article.image %>
+								<% break %>
+							<% end %>
+						<% end %>
+						<img src="<%= @image %>" alt="Event placeholder"/>
+						<figcaption>Bombing in a Syrian city</a></figcaption>
+					</figure>
+					<p id="event-description"><%= @page[:event].description %></p>
+					
+					<a href="#">
+						<span class="cta">
+							<span class="icon live"><b>LIVE</b></span> Breaking news <time>1 hour ago</time>
+						</span>
+					</a>
+				</article>				
+				<%= erb :'modules/_articles' %>				
+				<div class="secondary-modules">
+					<%= erb :'modules/_people' %>
+					<%= erb :'modules/_places' %>
+				</div>				
+				<%= erb :'modules/_timeline' %>
+				<%= erb :'modules/_blq_footer' %>
+			</div>
+			<!-- news-lab-events container -->
+		</div>
+	</div>
+</div>
+</div>
 </div>
 
-<div class="container" id="news-lab-events">
-
-  <article class="intro">
-  <header class="section"><h1><%= @page[:event].name %></h1></header>
-
-  <figure id="main">
-
-  <% @image = "/images/event/event-placeholder.jpeg" %>
-  <% @page[:articles].each do | article | %> 
-    
-    <% if not article.image.nil? %>
-      <% @image = article.image %>
-      <% break %>
-    <% end %>
-
-  <% end %>
-  
-  <img src="<%= @image %>" alt="Event placeholder"/>
-
-  <figcaption>Bombing in a Syrian city</a></figcaption>
-  </figure>
-<p id="event-description"><%= @page[:event].description %></p>
-
-<a href="#">
-  <span class="cta">
-    <span class="icon live"><b>LIVE</b></span>
-    Breaking news <time>1 hour ago</time>
-</span></a>
-</article>
-
-<%= erb :'modules/_articles' %>
-
-<div class="secondary-modules">
-  <%= erb :'modules/_people' %>
-  <%= erb :'modules/_places' %>
-</div>
-
-<%= erb :'modules/_timeline' %>
-</div>
 
