Added ORB to template files

--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -1,4 +1,4 @@
-<%= erb :'modules/_blq_masterhead' %>
+<%= erb :'modules/_news_mast_head' %>
 <div id="blq-container-outer" class="blq-journalism-domestic blq-ltr">
   <div id="blq-container" class="blq-lang-en-GB">
     <div id="blq-container-inner" xml:lang="en-GB">
@@ -40,7 +40,7 @@
                 <div class="layout-block-a">
                   <div class="story-body">
                     <!-- Breadcrumbs -->
-                    <%= erb :'modules/_news_articles_breadcrumbs' %>                    
+                    <%= erb :'modules/_breadcrumbs' %>                    
                     <!-- Breadcrumbs -->
                     <span class="story-date">
                       <span class="date">11 October 2012</span> <span class="time-text">Last updated at </span><span class="time">14:40</span></span>
@@ -372,7 +372,7 @@
           </div>
         </div>
         <!-- close europe -->      
-		<%= erb :'modules/_blq_footer' %>
+		
       </div>
       <!-- close blq-main -->
     </div>
@@ -449,5 +449,3 @@
       <a href="http://www.bbc.co.uk/news/world-europe-19906578#">Close Panel</a>
     </div>
   </div>
-</body>
-</html>
