--- a/views/news_events.erb
+++ b/views/news_events.erb
@@ -1,5 +1,4 @@
-<%= erb :'modules/_blq_masterhead' %>
-
+<%= erb :'modules/_news_mast_head' %>
 <div id="blq-container-outer" class="blq-journalism-domestic blq-ltr">
   <div id="blq-container" class="blq-lang-en-GB">
     <div id="blq-container-inner" xml:lang="en-GB">
@@ -66,8 +65,7 @@
 					<%= erb :'modules/_people' %>
 					<%= erb :'modules/_places' %>
 				</div>				
-				<%= erb :'modules/_timeline' %>
-				<%= erb :'modules/_blq_footer' %>
+				<%= erb :'modules/_timeline' %>				
 			</div>
 			<!-- news-lab-events container -->
 		</div>
