--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,6 +41,8 @@
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 	<!-- Events page assets -->
 	<% end %>
+	
+	<%= erb :'modules/orb/_head' %>
 
   </head>
   <script type="text/javascript">
@@ -57,6 +59,8 @@
 
   </script>  
   <body class="<%= @page[:domain][:body_class] %>">
+    <%= erb :'modules/orb/_mast_head' %>    
   	<%= yield %>
+  	<%= erb :'modules/orb/_footer' %>
  </body>
 </html> 
