--- a/public/stylesheets/news.css
+++ b/public/stylesheets/news.css
@@ -27,12 +27,12 @@ div#news-lab-events article.intro header h1{
   color: #000000;
   background: #ffffff;
   margin-top: 141px;
-  min-height: 4.5rem;
+  min-height: 2em;
 }
 /* Breaking news CTA */
 div#news-lab-events .cta {
   display: block;
-  font-size: 1.6rem;
+  font-size: 1em;
   font-weight: 800;
   margin: 5px 0 17px 10px;
   background-color: #ffffff;
@@ -40,7 +40,7 @@ div#news-lab-events .cta {
 div#news-lab-events .icon.live {
   position: relative;
   background-color: #cc0101;
-  font-size: 1rem;
+  font-size: 0.8em;
   font-weight: 400;	
   letter-spacing: -0.0425em;
   line-height: 1em;    
