--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/articles/main.css">    
    	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/type.css" />
    	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/global.css" />
-   	<link rel="stylesheet" type="text/css" media="print" href="/stylesheets/articles/print.css" />
    	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 976px)" href="/stylesheets/articles/mobile.css" />
 	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/components.css" />	
 	<link href="/stylesheets/articles/widgets.css" rel="stylesheet" type="text/css" class="gloaded async">	
@@ -24,19 +23,13 @@
 	<style type="text/css">img.emp-overlay-panel-holding-image {display:none;} .bbc-st-flash-hidden img.emp-overlay-panel-holding-image {display:block;}</style>
     <!-- News Article page assets -->
 	<% else %>
-	<!-- Events page assets -->
-	<!-- <link rel="stylesheet" type="text/css" href="/stylesheets/reset.css"> -->
-	
+	<!-- Events page assets -->	
 	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/main.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/type.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/global.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/skin.css">
-	
-
-	<link rel="stylesheet" type="text/css" href="/stylesheets/core.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/<%= @page[:domain][:body_class] %>.css">
-
-		    
+	<link rel="stylesheet" type="text/css" href="/stylesheets/events.css">
+			    
     <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>    
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 	<!-- Events page assets -->
