--- a/views/modules/_about_people.erb
+++ b/views/modules/_about_people.erb
@@ -10,9 +10,6 @@
       <h3 class="agents-header">
         <a class="story" href="http://en.wikipedia.org/wiki/<%=agent.id%>" target="_blank">
           <%=agent.name%>
-          <% if not agent.relations[:learn].objects.empty? %>
-            <img src="<%=agent.relations[:learn].objects.first.image%>">          
-          <% end %>
         </a>
       </h3>
 
@@ -25,9 +22,11 @@
           <% break if not about.populated %>
           <li>
             <a href="<%=about.uri%>" class="story ellipsis">
-            	<%=about.title%>
+              	<img src="<%=about.image%>">
+                <br>
+                <span class="kl-article-title"><%=about.title%></span>
             	<br>
-            	<span class="kl-article-description"><%=about.description%></span>
+            	<span class="kl-article-description ellipsis"><%=about.description%></span>
             </a>
           </li>
           <% end %>
