rejiggered font size

--- a/views/modules/_about_people.erb
+++ b/views/modules/_about_people.erb
@@ -24,7 +24,7 @@
             <a href="<%=about.uri%>" class="story ellipsis">
               	<img src="<%=about.image%>">
                 <br>
-                <span class="kl-article-title"><%=about.title%></span>
+                <span class="kl-article-title ellipsis"><%=about.title%></span>
             	<br>
             	<span class="kl-article-description ellipsis"><%=about.description%></span>
             </a>
