--- a/public/stylesheets/articles/klmodules.css
+++ b/public/stylesheets/articles/klmodules.css
@@ -127,6 +127,6 @@ nav.breadcrumb a:after {
 .kl-generic ul.kl-generic-main ol li:first-child img {
   display:block;
   width: 303px;
-
+  padding-bottom: 10px;
 }
 
