--- a/public/stylesheets/events.css
+++ b/public/stylesheets/events.css
@@ -25,6 +25,36 @@ figcaption {
   position: absolute;
   left: -9999px;
 }
+
+
+/* Override main.css */
+#blq-pre-mast, #blq-container-inner {
+    /*margin: 0 auto;*/
+    /*max-width: 976px;*/
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+#blq-main {
+    /*min-width: 976px;*/
+    min-width: 320px;
+    width: 100%;
+}
+#header {
+    /*width: 976px;*/
+    width: 100%;
+}
+#nav {
+    /*width: 976px;*/
+    width: 100%;
+}
+#sub-nav {
+    /*width: 976px;*/
+    width: 100%;
+}
+/* Override main.css */
+
+
 #global-header, #events-header, #footer-content {
   max-width: 976px;
   margin: 0 auto;
@@ -95,8 +125,12 @@ div#news-lab-events section, div#news-lab-events article {
 div#news-lab-events article.intro {
   position: relative;
 }
-div#news-lab-events article.intro header h1{
-  width: 276px;
+div#news-lab-events article.intro header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 276px;
 }
 div#news-lab-events article.intro figure {
   width: 320px;
@@ -109,7 +143,7 @@ div#news-lab-events article.intro figure img {
 div#news-lab-events article.intro p {
   font-size: 1.2em;
   line-height: 1.2;
-  margin: 6px 0 0 10px;
+  margin: 15px 0 0 10px;
   background-color: #ffffff;
 }
 div#news-lab-events section header.section h2 {
@@ -200,7 +234,7 @@ div#news-lab-events section.articles ol li:nth-child(n) a:after {
   content: counter(li);
   counter-increment: li;
   position: absolute;
-  top: 5px;
+  top: 15px;
   right: 4%;
   font-size: 2em;
   font-weight: 700;
@@ -376,7 +410,7 @@ div#news-lab-events section.open header h2 {
   background: #dcdcdc url('../images/event/icons-sprite.gif') no-repeat 95% 0; 
 }
 div#news-lab-events section header h2 {	
-  background: #dcdcdc url('../images/event/icons-sprite.gif') no-repeat 95% -44px;
+  background: #dcdcdc url('../images/event/icons-sprite.gif') no-repeat 95% -50px;
 }
 div#news-lab-events section.places {	
   border-top-style: solid;
@@ -467,6 +501,10 @@ div#news-lab-events section.people ul section.articles ol li a {
 	    width: 736px;
 	    float: left;   
 	}
+	div#news-lab-events article.intro header{
+    	top: 224px;
+    	width: 276px;
+	}
 	div#news-lab-events article.intro figure {
 	    width: 726px;
 	    height: 414px;
@@ -475,15 +513,6 @@ div#news-lab-events section.people ul section.articles ol li a {
 	div#news-lab-events section header h2 {	
         background: #dcdcdc;
     }
-    div#news-lab-events article.intro header{
-        position: absolute;
-        top: 224px;
-        left: 0;
-        z-index: 10;
-    }
-    div#news-lab-events article.intro header h1 {
-	    /*margin-top: 373px;*/
-	}
 	div#news-lab-events section.articles {
 	    width: 240px;
 	    float: left;
